FileChooser: fix width
If file chooser text is short (e.g. in English), use minimal width
defined in CSS. Otherwise, the buttons would look bad if the chooser
suddenly gets larger (e.g. when a file is selected). For mobile devices,
the entire window size has to be checked as well.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/filechooser/FileChooser.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/filechooser/FileChooser.less
@@ -12,7 +12,7 @@
   position: absolute;
   top: 25%;
   left: 50%;
-  max-width: 400px;
+  width: 400px;
   #scout.drop-shadow-large();
   border-top: 5px solid @active-color;
   border-radius: @border-radius;
